--- a/html e css/aula 3 atvd/index.html
+++ b/html e css/aula 3 atvd/index.html
@@ -1,25 +1,70 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercícios</title>
+    <title>netflix</title>
     <style>
-        body {
-            background: rgb(196, 196, 196);
-        }
+    body {
+        background-color: black;
+        color: white;
+        font-family: sans-serif;
+    }
+
+    .navbar {
+        background: #000;
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .logo {
+        width: 80px;
+    }
+
+    .banner {
+        background-image: url('narcos.jpg');
+        background-size: cover;
+        height: 400px;
+        color: white;
+        padding: 50px;
+    }
+
+    .banner h1 {
+        font-size: 3em;
+    }
+
+    .Filmes {
+        margin-left: 20px;
+        margin-top: 50px;
+    }
+
+    .filme {
+        width: 200px;
+        margin-right: 10px;
+    }
+
+    .row {
+        display: flex;
+        overflow-x: auto;
+    }
     </style>
 </head>
-
 <body>
-    <h1><span style="color:rgb(118, 115, 168); font-size: 50px;">Treinamento Físicos</span></h1>
-    <p><span style="font-size: 40px;">Aquecimento</span></p>
-    <p><span style="font-size: 14px; color:rgb(113, 131, 92)">Explicação Aquecimento </span></p>
-    <p><span style="font-size: 40px;">Esteira</span></p>
-    <p><span style="font-size: 14px; color:aquamarine">Explicação Flexão</span><br><img src="fexão.png" alt="Imagem Flexão"; style="width: 600px"></p>
-    <p><span style="font-size: 40px;">Cuidados pessoais</span></p>
-    <p><span style="font-size: 14px; color:rgb(41, 180, 223)">Cuidados específicos</span></p>
-</body>
 
-</html>
+    <div class="navbar">
+        <img src="logo.png" class="logo" alt="">
+        <div class="user">USERNAME</div>
+    </div>
+
+    <div class="banner">
+        <h1>NARCOS</h1>
+        <p>Temporada 3 já disponível</p>
+        <button>Assistir</button>
+        <button>Minha lista</button>
+    </div>
+
+    <div class="Filmes">
+        <h2>Em alta</h2>
+        <div class="row">
+            <img src="filme1.jpg" class="filme" alt="">
+            <img src="filme2.jpg" class="filme" alt="">
+            <img src="filme3.jpg"
